tests/ctu/fail/recurse.ct
var x = y;
var y = x;
